--- a/assets/scss/components/_breadcrumbs.scss
+++ b/assets/scss/components/_breadcrumbs.scss
@@ -47,7 +47,7 @@
 
 
 /*media queries*/
-@media screen and (max-width:767px){
+@media screen and (max-width:767.98px){
     .product-development-hero__breadcrumbs{
         font-size: 0.7rem!important;
         font-family:var.$font-open!important;
@@ -56,13 +56,24 @@
         // border:1px solid red;
         line-height:1.7!important;
         margin-bottom: 0px!important;
+        margin-top:20px!important;
     }
     .services-hero__breadcrumbs{
         font-size: 0.7rem!important;
         font-family:var.$font-open!important;
         font-weight:500!important;
         text-wrap:nowrap!important;
+        margin-top:20px!important;
         margin-bottom: 0px!important;
         // border:1px solid red;
+    }
+}
+
+@media screen and (min-width:768px) and (max-width:1199.98px){
+    .services-hero__breadcrumbs{
+        margin-top:20px!important;
+    }
+    .product-development-hero__breadcrumbs{
+        margin-top:20px!important;
     }
 }
