--- a/assets/scss/components/_navbar.scss
+++ b/assets/scss/components/_navbar.scss
@@ -89,8 +89,8 @@
 /*media queries*/
 @media (max-width: 393px) {
     .navbar-brand img {
-        width: 60px; /* Adjust size */
-        height: auto;
+        width: auto; /* Adjust size */
+        height: 80px;
     }
 }
 
